# somsiad

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .template.env  .terraformignore  CLAUDE.md  Dockerfile  README.md  cache.py  clickhouse.Dockerfile  configuration.py  core.py  data.py  dev.sh  develop.sh  docker-compose.dev.yml  docker-compose.yml  load-extensions.sh  matplotlibrc  migrate_to_v2.py  mypy.ini  postgres.Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.py  run.sh  sentry_release.sh  sentry_release_deploy.sh  server_data.py  server_settings.py  somsiad.py  somsiad_helper.py  utilities.py  version.py
clickhouse/: Dockerfile
data/: 8ball_responses.txt  choice_answers.json  currency_codes.txt  eightball_answers.json  eightball_answers.txt  reddit_auth_parts.json  wiki_abbrevations.txt
docs/: CNAME  index.html  main.css
plugins/: __init__.py  activity.py  autoreply.py  birthday.py  birthdays.py  bot_owner_tools.py  bot_owner_utilities.py  burn.py  calculator.py  chat.py  choice.py  close.py  closing.py  colors.py  commands.py  copypasta.py  currency.py  data_processing.py  deepfry.py  dice.py  disco.py  eightball.py  emoticons.py  g_search.py  giphy.py  goodreads.py  google.py  google_search.py  help.py  help_direct.py  help_message.py  helped.py  image_search.py  imaging.py  invite.py  inviting.py  isitup.py  last_fm.py  mangle.py  miejski.py  (+33 more)
static/: main.css
templates/: index.html
terraform-oci/: .terraform.lock.hcl  main.tf  variables.tf
(+16 files in other folders)
