[project]
name = "somsiad"
version = "2.7.0"
requires-python = "==3.11.*" # Same as in Dockerfile
dependencies = [
    "Pillow==9.5.0",
    "discord.py[voice]==2.3.2",
    "psycopg2==2.9.3",
    "SQLAlchemy==1.4.51",
    "psutil==5.9.0",
    "defusedxml==0.7.1",
    "google-api-python-client==2.33.0",
    "pytube==15.0.0",
    "matplotlib==3.8.*",
    "packaging>=22.0",
    "sentry-sdk==1.39.*",
    "aiocontextvars==0.2.2",
    "ImageHash==4.3.*",
    "scipy==1.12.*",
    "pywavelets==1.5.*",
    "numpy==1.26.*",
    "beautifulsoup4==4.10.0",
    "ptvsd==4.3.2",
    "aiochclient[aiohttp-speedups]==2.6.0",
    "pycares==4.4.*", # Without this, an older version is installed, which has compilation issues on Python 3.11
    "yarl==1.9.*",
    "redis==5.0.*",
    "tiktoken==0.9.*",
    "aiopytesseract==0.10.0",
    "jurigged==0.5.*",
    "Unidecode==1.3.*",
    "arithmeval==0.3.*",
    "grapheme==0.6.*",
    "posthog==6.*",
    "anthropic[aiohttp]>=0.72.0",
]


[dependency-groups]
dev = [
    "pre-commit==3.6.*",
    "pyyaml==6.0.*",     # Without this, an older version is installed, which has compilation issues on Python 3.11
    "mypy==1.8.*",
    "black==23.12.*",
    "ruff==0.1.*",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 8
ensure_newline_before_comments = true
line_length = 120
virtual_env = "venv"
